--- a/thehighlandsbreak/assets/css/style.css
+++ b/thehighlandsbreak/assets/css/style.css
@@ -1,7 +1,10 @@
+.nav-bar {
+    text-decoration-color: #ffffff;
+}
 body {
   margin: 0;
-  font-size: 28px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 header {
