--- a/thehighlandsbreak/assets/css/style.css
+++ b/thehighlandsbreak/assets/css/style.css
@@ -14,7 +14,12 @@ header {
   padding: 156px 0 100px;
   text-align: center;
 }
+intro-image {
 
+    background-image: url()
+
+
+}
 section {
   padding: 200px 0;
 }
@@ -25,7 +30,7 @@ section {
 }
 
 .contact-heading {
-    font-family: "Exo", sans-serif;
+    font-family: "Nato Sans", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
