--- a/thehighlandsbreak/assets/css/style.css
+++ b/thehighlandsbreak/assets/css/style.css
@@ -22,9 +22,11 @@ hr {
 }
 section {
   padding: 50px 0;
+
 #map {
-    height: 100%;
-  }
+  height: 400px;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+
   html, body {
     height: 100%;
     margin: 0;
