--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ font-family: 'Montserrat', sans-serif;
 /* Backgroud image taken by myself*/
 
 #landing-picture {
-  background: url("thehighlandsbreak/assests/images/hill.jpeg");
+  background: url("/assests/images/hill.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
