--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,93 @@
-html,body {
-    font-family: 'Montserrat', sans-serif;
+#map {
+  height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+body {
+  padding: 0 !important;
+}
+table {
+  font-size: 12px;
+}
+.hotel-search {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 440px;
+  z-index: 1;
+}
+#map {
+  margin-top: 40px;
+  width: 440px;
+}
+#listing {
+  position: absolute;
+  width: 200px;
+  height: 470px;
+  overflow: auto;
+  left: 442px;
+  top: 0px;
+  cursor: pointer;
+  overflow-x: hidden;
+}
+#findhotels {
+  font-size: 14px;
+}
+#locationField {
+  -webkit-box-flex: 1 1 190px;
+  -ms-flex: 1 1 190px;
+  flex: 1 1 190px;
+  margin: 0 8px;
+}
+#controls {
+  -webkit-box-flex: 1 1 140px;
+  -ms-flex: 1 1 140px;
+  flex: 1 1 140px;
+}
+#autocomplete {
+  width: 100%;
+}
+#country {
+  width: 100%;
+}
+.placeIcon {
+  width: 20px;
+  height: 34px;
+  margin: 4px;
+}
+.hotelIcon {
+  width: 24px;
+  height: 24px;
+}
+#resultsTable {
+  border-collapse: collapse;
+  width: 240px;
+}
+#rating {
+  font-size: 13px;
+  font-family: Arial Unicode MS;
+}
+.iw_table_row {
+  height: 18px;
+}
+.iw_attribute_name {
+  font-weight: bold;
+  text-align: right;
+}
+.iw_table_icon {
+  text-align: right;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
@@ -23,7 +111,7 @@ body {
 /*---------------------------Background Image*/
 /* Backgroud image taken by myself*/
 #landing-picture {
-  background: url("assets/css/images/landscape10.jpg");
+  background: url("assets/images/landscape10.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -50,6 +138,8 @@ hr {
     color: #575656;
 
 }
+
+
 
 section {
   padding: 50px 0;
