--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html,body {
 }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
-.navbar-nav {
+/*.navbar-nav {
   margin: 1em 0 0 1em; }
 
 .navbar {
@@ -13,6 +13,7 @@ html,body {
 .navbar-nav
 .nav-link {
   font-size: 1.3em; }
+*/
 
 
 body {
