--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,13 @@ button[type="submit"] {
    
 }
 
+#book {
+  position: relative;
+  height: 3em; }
+  #book a {
+    position: absolute;
+    top: -2em; }
+
 /*--------------------------------------------Media Queries*/
 
 
