--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,29 @@ button[type="submit"] {
     #booking-form .form-group label {
       color: #000000;
       font-weight: bold; }
+
+      #submit-form {
+  background-color: #ffffff;
+  color: #000000;
+  margin-top: 1em;
+  margin-left: 1em;
+  margin-bottom: 1em; }
+  #submit-form:hover {
+    text-decoration: underline;
+    cursor: pointer; }
+
+    *---------------------------Modal*/
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
 /*--------------------------------------------Media Queries*/
 
 
