--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,13 @@ button[type="submit"] {
   overflow: auto;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.4); }
+
+  .modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%; }
 /*--------------------------------------------Media Queries*/
 
 
