changed booking backgroun

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ html,body {
 
     #landingpicture {
 
-      height: 400px; } 
+      height: 400px; 
+      padding-top: 75px;} 
   {
 
   
@@ -64,6 +65,7 @@ button[type="submit"] {
 #map {
    height:400px;
    width:100%;
+}
    /*------------------------ booking*/
 
 #listings {
@@ -122,7 +124,7 @@ button[type="submit"] {
     top: -2em; }
 
 .form-bg {
-  background: url("../images/fairypool.jpeg");
+  background: url("../images/manflag.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -131,7 +133,9 @@ button[type="submit"] {
   transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out; }
+  -o-transition: all .3s ease-in-out; 
+   @media (min-width: 600px) }
+
 
 #booking-form {
   background: rgba(255, 255, 255, 0.5);
@@ -153,7 +157,8 @@ button[type="submit"] {
     text-decoration: underline;
     cursor: pointer; }
 
-    *---------------------------Modal*/
+    /*---------------------------Modal*/
+
 .modal {
   display: none;
   position: fixed;
