--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,23 +7,25 @@ html,body {
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 .navbar-nav {
-  margin: 1em 0 0 1em; }
+  margin: 1em 0 0 1em; 
+  }
 
 .navbar {
-  padding: 0rem 1rem; }
+  padding: 0rem 1rem; 
+  }
 
 .navbar-light
 .navbar-nav
 .nav-link {
   font-size: 1.3em; 
-@media (min-width: 600px) 
-
-   }
+/* @media (min-width: 600px) */
+}
 
 social-links a {
   font-size: 20px;
   padding: 5px 5px 5px 5px;
-  text-decoration: none; }
+  text-decoration: none; 
+  }
 /*---------------------------Background Image*/
 /* Backgroud image taken by myself*/
 
@@ -37,14 +39,16 @@ social-links a {
   transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out; }
+  -o-transition: all .3s ease-in-out;
+}
   @media (min-width: 600px) {
 
     #landingpicture {
 
       height: 400px; 
-      padding-top: 75px;} 
-  {
+      padding-top: 75px;
+      } 
+  }
 
   
 
@@ -57,6 +61,16 @@ section {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
+}
+
+#info-window {
+    max-height: 400px;
+    overflow: auto;
+}
+
+#map-container {
+    padding-bottom: 50px;
+
 }
 
 button[type="submit"] {
