--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,18 +218,21 @@ button.btn.btn-primary:hover {
     font-size: 25px;
 }
 /*--------------------------------------------Footer*/
-footer-details {
+.footer-details {
     display: flex; 
+    padding: 20px;
 }
 footer a {
     color: #575656;
+    padding: 15px;
+    font-size: 15px;
+    width: 50px;
     text-align: center;
-    margin:0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    text-decoration: none;
     
 }
 footer a:hover,
 footer a:focus{
     color: rgb(193, 218, 241);
+}
 }}
